fix: update path
