# docs/swagger.json
@@ -19,7 +19,7 @@
     "paths": {
         "/auth/admins": {
             "post": {
-                "description": "Registers a new user. The 'admin' flag (passed during route setup, not an API param) determines if an admin user is created. Incase of user registration it starts the verifcation process, the user won't be saved on the database unless the process is finished",
+                "description": "Registers a new Admin",
                 "consumes": [
                     "application/json"
                 ],
@@ -29,7 +29,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Register a new user",
+                "summary": "Register a new Admin",
                 "parameters": [
                     {
                         "description": "User Registration Details",
@@ -156,7 +156,7 @@
         },
         "/auth/users": {
             "post": {
-                "description": "Registers a new user. The 'admin' flag (passed during route setup, not an API param) determines if an admin user is created. Incase of user registration it starts the verifcation process, the user won't be saved on the database unless the process is finished",
+                "description": "Registers a new user",
                 "consumes": [
                     "application/json"
                 ],
@@ -465,55 +465,6 @@
                 }
             }
         },
-        "/users/modify": {
-            "post": {
-                "description": "Updates user information",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Modify user",
-                "parameters": [
-                    {
-                        "description": "Updated user data",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Updated user data",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "$ref": "#/definitions/models.User"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request format",
-                        "schema": {
-                            "$ref": "#/definitions/utils.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.HTTPError"
-                        }
-                    }
-                }
-            }
-        },
         "/users/notify": {
             "post": {
                 "description": "Send a notification to users sent in body",
@@ -597,6 +548,60 @@
                     },
                     "404": {
                         "description": "User not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Updates user information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Modify user",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Updated user data",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Updated user data",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "$ref": "#/definitions/models.User"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid user ID format or request format",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/utils.HTTPError"
                         }
@@ -789,6 +794,7 @@
                 "email",
                 "name",
                 "password",
+                "role",
                 "surname"
             ],
             "properties": {
@@ -802,8 +808,15 @@
                 },
                 "password": {
                     "type": "string",
-                    "maxLength": 60,
                     "minLength": 8
+                },
+                "role": {
+                    "type": "string",
+                    "enum": [
+                        "student",
+                        "teacher",
+                        "admin"
+                    ]
                 },
                 "surname": {
                     "type": "string",
@@ -833,12 +846,17 @@
         },
         "models.LoginRequest": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 8
                 }
             }
         },
@@ -905,11 +923,8 @@
         "models.User": {
             "type": "object",
             "properties": {
-                "admin": {
-                    "type": "boolean"
-                },
                 "blocked": {
-                    "description": "Ya no tiene etiqueta db directa, se calcula con JOIN",
+                    "description": "No direct db tag, calculated with JOIN",
                     "type": "boolean"
                 },
                 "created_at": {
@@ -930,10 +945,10 @@
                 "name": {
                     "type": "string"
                 },
-                "phone": {
+                "profile_photo": {
                     "type": "string"
                 },
-                "profile_photo": {
+                "role": {
                     "type": "string"
                 },
                 "surname": {
@@ -941,6 +956,9 @@
                 },
                 "updated_at": {
                     "type": "string"
+                },
+                "verified": {
+                    "type": "boolean"
                 }
             }
         },
